--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "topthink/think-testing": "^1.0",
         "topthink/think-helper": "^1.0",
         "php-curl-class/php-curl-class": "^7.2",
-        "php-ffmpeg/php-ffmpeg": "^0.9.3"
+        "php-ffmpeg/php-ffmpeg": "^0.9.3",
+        "overtrue/wechat": "~3.1"
     },
     "extra": {
         "think-path": "thinkphp"
