--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "topthink/think-helper": "^1.0",
         "php-curl-class/php-curl-class": "^7.2",
         "php-ffmpeg/php-ffmpeg": "^0.9.3",
-        "overtrue/wechat": "~3.1"
+        "overtrue/wechat": "~3.1",
+        "flc/alidayu": "^2.0"
     },
     "extra": {
         "think-path": "thinkphp"
